# REICalc-MCP

./: .gitignore  main.py  pyproject.toml
src/reicalc_mcp/: server.py
src/reicalc_mcp/calculators/: _common.py  _validation.py  advanced.py  analysis.py  core.py  financing.py  lending.py  management.py  metrics.py  strategies.py
src/reicalc_mcp/resources/: calculator_examples.py  insights.py  market_data.py  state_assistance.py
tests/: test_advanced.py  test_analysis.py  test_common.py  test_core.py  test_financing.py  test_lending.py  test_management.py  test_metrics.py  test_strategies.py  test_validation.py
