[project]
name = "reicalc-mcp"
version = "0.1.0"
description = "MCP server for real estate investment calculators"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp",
]

[project.scripts]
reicalc-mcp = "reicalc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reicalc_mcp"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
]
